# skill-scanner

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  renovate.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml  release.yml  zizmor.yml
docs/: architecture.md  skill-scanner-flow.excalidraw  threat-model.md
src/skill_scanner/: __init__.py  __main__.py  cli.py  config.py
src/skill_scanner/analyzers/: __init__.py  ai_analyzer.py  llm_analyzer.py  pipeline.py  vt_analyzer.py
src/skill_scanner/discovery/: __init__.py  finder.py  patterns.py
src/skill_scanner/models/: __init__.py  findings.py  progress.py  reports.py  targets.py
src/skill_scanner/output/: __init__.py  console.py  json_export.py  progress.py  sarif_export.py  summary.py
src/skill_scanner/providers/: __init__.py  base.py  litellm_provider.py  openai_provider.py
src/skill_scanner/scoring/: __init__.py  risk.py
src/skill_scanner/utils/: retry.py
src/skill_scanner/validation/: __init__.py  frontmatter.py  skill_spec.py  static_rules.py
tests/: conftest.py  test_ai_analyzer.py  test_cli.py  test_config.py  test_discovery.py  test_findings.py  test_litellm_provider.py  test_openai_provider.py  test_output_categories.py  test_pipeline.py  test_scoring.py  test_validation.py  test_version.py  test_vt_analyzer.py
tests/fixtures/clean_skill/: SKILL.md
tests/fixtures/encoded_payload_skill/: SKILL.md
tests/fixtures/encoded_payload_skill/scripts/: run.sh
tests/fixtures/exfil_skill/: SKILL.md
tests/fixtures/exfil_skill/scripts/: exfil.py
tests/fixtures/prompt_inject_skill/: SKILL.md
