[project]
name = "skill-scanner"
version = "0.3.1"
description = "Security scanner for detecting and remediating malicious AI agent skills and instruction artifacts"
readme = "README.md"
authors = [{ name = "skill-scanner" }]
requires-python = "==3.14.4"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx==0.28.1",
    "litellm==1.83.7",
    "pydantic==2.12.5",
    "rich==14.3.4",
    "typer==0.23.1",
]

[dependency-groups]
dev = [
    "mypy==1.20.2",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.15.12",
]

[project.scripts]
skill-scanner = "skill_scanner.cli:app"
skillscan = "skill_scanner.cli:app"

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_scanner"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "tests",
    "README.md",
    "LICENSE",
    "SECURITY.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501", "SIM108", "SIM115"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
